test/rebar_edoc_SUITE_data/bad/apps/bad_bar1/src/bad_bar1.app.src
{application, bad_bar1,
 [{description, "An OTP application"},
  {vsn, "0.1.0"},
  {registered, []},
  {mod, { bad_bar1_app, []}},
  {applications,
   [kernel,
    stdlib
   ]},
  {env,[]},
  {modules, []},

  {maintainers, []},
  {licenses, []},
  {links, []}
 ]}.
